# Mu3Library_ForUnity

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.ja.md  CHANGELOG.ko.md  CHANGELOG.md  CameraManager.cs  LICENSE  Mu3Library_ForUnity.slnx  PublicEnums.cs  README.ja.md  README.ko.md  README.md  ai-agent-renewal-guide.md
.github/: copilot-instructions.md
.github/agents/: cli-platform.agent.md  unity.agent.md  (+10 more)
Animation/: AnimationFuncList.cs  AnimationInfo.cs
Assets/: DefaultVolumeProfile.asset  InputSystem_Actions.inputactions  Mu3LibrarySamples  Mu3LibraryWithPostProcessingSamples  TestDrawClass.cs  TestDrawClassDrawer.cs  TestTerrain.asset  UniversalRenderPipelineGlobalSettings.asset
Character/: CharacterController.cs  CharacterEnums.cs  CharacterState.cs  CharacterStateType.cs
InputHelper/: KeyCodeInputCollector.cs
Mu3Library_Base/: package.json
Mu3Library_URP/: package.json
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Raycast/: FloorContactRayHelper.cs  HitPointStruct.cs  RayCapsuleHelper.cs  RayHelper.cs  RaySphereHelper.cs
Resource/: ResourceLoader.cs
Scene/: SceneLoader.cs
Singleton/: GenericSingleton.cs
UnityProject_BuiltIn/: Mu3Library_ForUnity.code-workspace
UnityProject_URP/: Mu3Library_ForUnity.code-workspace
Utility/: UnityObjectPool.cs  UtilFunc.cs
tasks/: lessons.md  todo.md
tools/mu3_cli/: README.md  pyproject.toml
tools/mu3_cli/src/mu3_cli/: __init__.py  __main__.py  cli.py  csdevkit.py  repository.py
(+1105 files in other folders)
